--- a/home/index.html
+++ b/home/index.html
@@ -4,299 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .category-section {
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
-  padding: 40px;
-  flex-wrap: wrap;
-}
-
-.category-card {
-  border: 1px solid #ddd;
-  width: 30%;
-  min-width: 250px;
-  position: relative;
-  overflow: hidden;
-  background: #fff;
-  transition: transform 0.3s;
-}
-
-.category-card:hover {
-  transform: scale(1.02);
-}
-
-.category-card img {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-
-.category-text {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  color: #222;
-}
-
-.category-text h2 {
-  font-size: 24px;
-  margin: 0;
-}
-
-.category-text p {
-  margin: 5px 0 0;
-  color: #555;
-}
-.product-overview {
-  padding: 40px 20px;
-  max-width: 1200px;
-  margin: auto;
-}
-
-.overview-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.overview-header h2 {
-  font-size: 28px;
-  font-weight: bold;
-  margin: 0;
-}
-
-.overview-controls {
-  display: flex;
-  gap: 10px;
-}
-
-.control-btn {
-  padding: 8px 14px;
-  border: 1px solid #ccc;
-  background: white;
-  cursor: pointer;
-  font-size: 14px;
-  border-radius: 4px;
-}
-
-.control-btn span {
-  margin-right: 5px;
-}
-
-.product-categories {
-  margin-top: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 25px;
-  font-size: 15px;
-}
-
-.product-categories a {
-  text-decoration: none;
-  color: #555;
-  border-bottom: 2px solid transparent;
-  padding-bottom: 5px;
-  transition: all 0.3s ease;
-}
-
-.product-categories a:hover,
-.product-categories a.active {
-  color: #000;
-  font-weight: bold;
-  border-color: #000;
-}
-
-.product-section {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
-  justify-content: center;
-  padding: 40px 20px;
-}
-
-.product-card {
-  width: 220px;
-  position: relative;
-  border: 1px solid #eee;
-  padding: 10px;
-  transition: box-shadow 0.3s;
-}
-
-.product-card:hover {
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
-
-.product-img {
-  position: relative;
-  overflow: hidden;
-}
-
-.product-img img {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-
-.quick-view-btn {
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  background: white;
-  border: 1px solid #ccc;
-  padding: 6px 12px;
-  font-size: 14px;
-  cursor: pointer;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-
-.product-img:hover .quick-view-btn {
-  opacity: 1;
-}
-
-.product-info {
-  margin-top: 10px;
-}
-
-.product-title {
-  font-size: 15px;
-  color: #222;
-  margin: 0;
-}
-
-.product-price {
-  color: #888;
-  font-size: 14px;
-  margin-top: 5px;
-}
-
-.wishlist {
-  position: absolute;
-  bottom: 15px;
-  right: 15px;
-  font-size: 18px;
-  color: #ccc;
-  cursor: pointer;
-  transition: color 0.3s;
-}
-
-.wishlist:hover {
-  color: red;
-}
-
-.footer {
-  background-color: #222;
-  color: #bbb;
-  padding: 50px 20px 20px;
-  font-family: sans-serif;
-}
-
-.footer-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 40px;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.footer-box {
-  flex: 1 1 200px;
-}
-
-.footer-box h4 {
-  color: white;
-  font-size: 14px;
-  margin-bottom: 20px;
-}
-
-.footer-box ul {
-  list-style: none;
-  padding: 0;
-}
-
-.footer-box ul li {
-  margin-bottom: 10px;
-}
-
-.footer-box ul li a {
-  text-decoration: none;
-  color: #bbb;
-  font-size: 14px;
-  transition: color 0.3s;
-}
-
-.footer-box ul li a:hover {
-  color: #fff;
-}
-
-.footer-box p {
-  font-size: 14px;
-  line-height: 1.6;
-}
-
-.social-icons a img {
-  width: 20px;
-  margin-right: 10px;
-  filter: grayscale(100%) brightness(1.5);
-  transition: filter 0.3s;
-}
-
-.social-icons a:hover img {
-  filter: grayscale(0%);
-}
-
-.footer-box input[type="email"] {
-  width: 100%;
-  padding: 10px;
-  border: none;
-  background: #333;
-  color: #fff;
-  margin-bottom: 10px;
-  outline: none;
-  font-size: 14px;
-}
-
-.subscribe-btn {
-  background: #7f82ff;
-  color: white;
-  padding: 10px 25px;
-  border: none;
-  border-radius: 20px;
-  cursor: pointer;
-  font-size: 14px;
-}
-
-.subscribe-btn:hover {
-  background: #676aff;
-}
-
-.footer-bottom {
-  text-align: center;
-  margin-top: 40px;
-  font-size: 14px;
-  color: #aaa;
-}
-
-.footer-bottom a {
-  color: #7f82ff;
-  text-decoration: none;
-}
-
-.payment-icons img {
-  height: 25px;
-  margin: 0 5px;
-  vertical-align: middle;
-}
-
-
-
-
-    </style>
+    <link rel="stylesheet" href="home_css.css" />
+    
 </head>
 <body>
     <section class="category-section">
@@ -388,7 +97,7 @@
   <div class="product-card">
     <div class="product-img">
       <img src="https://preview.colorlib.com/theme/cozastore/images/product-01.jpg.webp" alt="Classic Trench Coat">
-      <button class="quick-view-btn">Quick View</button>
+<a href="#product-popup" class="quick-view-btn">Quick View</a>
     </div>
     <div class="product-info">
       <p class="product-title">Classic Trench Coat</p>
@@ -400,7 +109,7 @@
    <div class="product-card">
     <div class="product-img">
       <img src="https://preview.colorlib.com/theme/cozastore/images/product-01.jpg.webp" alt="Classic Trench Coat">
-      <button class="quick-view-btn">Quick View</button>
+<a href="#product-popup" class="quick-view-btn">Quick View</a>
     </div>
     <div class="product-info">
       <p class="product-title">Classic Trench Coat</p>
@@ -410,7 +119,7 @@
   </div> <div class="product-card">
     <div class="product-img">
       <img src="https://preview.colorlib.com/theme/cozastore/images/product-01.jpg.webp" alt="Classic Trench Coat">
-      <button class="quick-view-btn">Quick View</button>
+<a href="#product-popup" class="quick-view-btn">Quick View</a>
     </div>
     <div class="product-info">
       <p class="product-title">Classic Trench Coat</p>
@@ -420,7 +129,7 @@
   </div> <div class="product-card">
     <div class="product-img">
       <img src="https://preview.colorlib.com/theme/cozastore/images/product-01.jpg.webp" alt="Classic Trench Coat">
-      <button class="quick-view-btn">Quick View</button>
+<a href="#product-popup" class="quick-view-btn">Quick View</a>
     </div>
     <div class="product-info">
       <p class="product-title">Classic Trench Coat</p>
@@ -430,7 +139,7 @@
   </div> <div class="product-card">
     <div class="product-img">
       <img src="https://preview.colorlib.com/theme/cozastore/images/product-01.jpg.webp" alt="Classic Trench Coat">
-      <button class="quick-view-btn">Quick View</button>
+<a href="#product-popup" class="quick-view-btn">Quick View</a>
     </div>
     <div class="product-info">
       <p class="product-title">Classic Trench Coat</p>
@@ -493,9 +202,34 @@
   </div>
 </footer>
 
+
+<!-- // mohamed work // -->
+
+<!-- Product Popup -->
+<div id="product-popup" class="popup-overlay">
+  <div class="popup-box">
+    <a href="#" class="close-btn">×</a>
+    <div class="popup-content">
+      <div class="popup-image">
+        <img src="./smiley.png" alt="Product">
+      </div>
+      <div class="popup-details">
+        <h2>My Product Title</h2>
+        <p class="popup-price">$19.99</p>
+        <p class="popup-desc">This is a fixed product description. Add anything you like here.</p>
+        <button class="popup-add-cart">ADD TO CART</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"></script>
+<script src="customer.js"></script>
 
 
 
