[NEW] auth pages

--- a/home/index.html
+++ b/home/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .category-section {
+    
+   
+
+
+ /* */
+  .category-section {
   display: flex;
   justify-content: space-between;
   gap: 20px;
@@ -299,6 +304,9 @@
     </style>
 </head>
 <body>
+  <nav>
+
+  </nav>
     <section class="category-section">
   <div class="category-card">
     <div class="category-text">
