--- a/admin/edit-product.html
+++ b/admin/edit-product.html
@@ -11,7 +11,7 @@
         <nav>
             <div class="logo">
                 <strong>Admin</strong>
-                <strong>Dashboard</strong>
+                <strong class="dashboard">Dashboard</strong>
             </div>
             <div class="logout">
                 <button class="logout-btn">Logout</button>
