--- a/admin/products.html
+++ b/admin/products.html
@@ -11,7 +11,7 @@
         <nav>
             <div class="logo">
                 <strong>Admin</strong>
-                <strong>Dashboard</strong>
+                <strong class="dashboard">Dashboard</strong>
             </div>
             <div class="logout">
                 <button class="logout-btn">Logout</button>
@@ -32,6 +32,8 @@
                 <form action="">
                     <label for="product-name">Product Name</label>
                     <input type="text" placeholder="Product Name">
+                    <label for="product-description">product Description</label>
+                    <textarea name="product-description" id="product-description"  rows="7" cols="72"></textarea>
                     <label for="product-price">Product Price</label>
                     <input type="number" placeholder="Product Price">
                     <label for="product-quantity">Product Quantity</label>
