modifing the nav bar

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -3,30 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cartstyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="cartstyle.css">
     <title>Cart Page</title>
 </head>
 <body>
-            <!--nav-->
-    <nav>
-        <div>
-        <a href="###"><img src="images/logo-01.png.webp" alt="logo-site" title="the logo"></a>
-        <a class="links" href="##">Home</a>
-        <a class="links" href="##">Shop</a>
-        <a class="links" href="##">Features</a>
-        <a class="links" href="#">Blog</a>
-        <a class="links" href="#">About</a>
-        <a class="links" href="#">Contact</a>
+        <!-- Main Menu -->
+    <div class="main-menu">
+    <div class="container">
+    <div class="menu-content">
+        <a href="#" class="logo">COZA STORE</a>
+        <div class="nav-links">
+        <a href="#">Home</a>
+        <a href="#">Shop</a>
+        <a href="#">Features</a>
+        <a href="#">Blog</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+        <div class="nav-icons">
+        <a href="#"><i class="fas fa-shopping-cart"></i></a>
+        <a href="#"><i class="fas fa-heart"></i></a>
+        <a href="#"><i class="fas fa-search"></i></a>
         </div>
-        <div class="icons">
-        <a href="###"><i class="fas fa-search"></i></a>
-        <a href="###"><i class="fas fa-shopping-cart"></i></a>
-        <a href="###"><i class="fas fa-heart"></i></a>
+        <a href="../auth/login.html"><button class="btnlogin">login </button></a>
         </div>
-    </nav>
-        <br>
-        <hr>
+        </div>
+        </div>
+        </div>
             <!--body wished product-->
 <div class="cart-container">
     <div class="table-header">
