Crud For Categ and products

--- a/admin/index.html
+++ b/admin/index.html
@@ -21,8 +21,8 @@
       <aside class="sidebar">
         <span>Main</span>
         <a href="index.html">Home</a>
-        <a href="categories.html">Categories</a>
-        <a href="products.html">Products</a>
+        <a href="categories/categories.html">Categories</a>
+        <a href="products/products.html">Products</a>
         <a href="orders.html">Orders</a>
       </aside>
         <div class="total">
@@ -41,7 +41,7 @@
         <!-- أي محتوى هنا -->
       </section>
     </main>
-    <script src="main.js"></script>
+    <script src="categories/main.js"></script>
   </body>
   
 </html>
