--- a/admin/orders.html
+++ b/admin/orders.html
@@ -22,8 +22,8 @@
         <aside class="sidebar">
             <span>Main</span>
                 <a   href="index.html">Home</a>
-                <a   href="categories.html">categories</a>
-                <a   href="products.html">products</a>
+                <a   href="categories/categories.html">categories</a>
+                <a   href="products/products.html">products</a>
                 <a   href="orders.html">orders</a>
         </aside>
         <section class="content">
@@ -111,6 +111,6 @@
         </section>
     </main>
 
-    <script src="main.js"></script>
+    <script src="categories/main.js"></script>
 </body>
 </html>
