--- a/wishlist/wishlist.html
+++ b/wishlist/wishlist.html
@@ -12,11 +12,11 @@
     <div class="main-menu">
     <div class="container">
     <div class="menu-content">
-        <a href="#" class="logo">COZA STORE</a>
+        <a href="../home/index.html" target="_blank" class="logo">COZA STORE</a>
         <div class="nav-links">
-        <a href="#">Home</a>
-        <a href="#">Shop</a>
-        <a href="#">Features</a>
+        <a href="../home/index.html" target="_blank">Home</a>
+        <a href="../home/index.html" target="_blank">Shop</a>
+        <a href="../home/index.html" target="_blank">Features</a>
         <a href="#">Blog</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
@@ -72,17 +72,16 @@
                 <div class="summary-item">
                     <span> Element in Wish List : </span>
                     <span class="summary-value">2</span>
-                    
                 </div>
-                <div class="summary-actions">
-                    <button class="btn btn-primary share-wishlist-btn">Share The Wish List</button>
-                    <button class="btn btn-primary email-wishlist-btn">Send Email To Friend</button>
+                <div class="total-price">
+                <span> The Total : </span>
+                <span class="totalprice-value">$52.00</span>
                 </div>
-
                 <div class="summary-footer">
-                    <button class="btn btn-primary proceed-checkout-btn">Continue To Buy</button>
+                    <button class="proceed-checkout-btn">Continue To Buy</button>
                 </div>
     </aside>
     
+    <script src="wishlistscript.js"></script>
 </body>
 </html>
