--- a/home/index.html
+++ b/home/index.html
@@ -134,123 +134,9 @@
     </section>
 
     <section class="product-section">
-      <div class="product-card">
-        <div class="product-img">
-          <img
-            src="https://preview.colorlib.com/theme/cozastore/images/product-01.jpg.webp"
-            alt="Esprit Ruffle Shirt"
-          />
-          <button class="quick-view-btn">Quick View</button>
-        </div>
-        <div class="product-info">
-          <p class="product-title">Esprit Ruffle Shirt</p>
-          <p class="product-price">$16.64</p>
-        </div>
-        <span class="wishlist">♡</span>
-      </div>
+  <!-- Products will be loaded here by customer.js -->
+</section>
 
-      <div class="product-card">
-        <div class="product-img">
-          <img
-            src="https://preview.colorlib.com/theme/cozastore/images/product-01.jpg.webp"
-            alt="Herschel supply"
-          />
-          <button class="quick-view-btn">Quick View</button>
-        </div>
-        <div class="product-info">
-          <p class="product-title">Herschel supply</p>
-          <p class="product-price">$35.31</p>
-        </div>
-        <span class="wishlist">♡</span>
-      </div>
-
-      <div class="product-card">
-        <div class="product-img">
-          <img
-            src="https://preview.colorlib.com/theme/cozastore/images/product-01.jpg.webp"
-            alt="Only Check Trouser"
-          />
-          <button class="quick-view-btn">Quick View</button>
-        </div>
-        <div class="product-info">
-          <p class="product-title">Only Check Trouser</p>
-          <p class="product-price">$25.50</p>
-        </div>
-        <span class="wishlist">♡</span>
-      </div>
-
-      <div class="product-card">
-        <div class="product-img">
-          <img
-            src="https://preview.colorlib.com/theme/cozastore/images/product-01.jpg.webp"
-            alt="Classic Trench Coat"
-          />
-          <a href="#product-popup" class="quick-view-btn">Quick View</a>
-        </div>
-        <div class="product-info">
-          <p class="product-title">Classic Trench Coat</p>
-          <p class="product-price">$75.00</p>
-        </div>
-        <span class="wishlist">♡</span>
-      </div>
-
-      <div class="product-card">
-        <div class="product-img">
-          <img
-            src="https://preview.colorlib.com/theme/cozastore/images/product-01.jpg.webp"
-            alt="Classic Trench Coat"
-          />
-          <a href="#product-popup" class="quick-view-btn">Quick View</a>
-        </div>
-        <div class="product-info">
-          <p class="product-title">Classic Trench Coat</p>
-          <p class="product-price">$75.00</p>
-        </div>
-        <span class="wishlist">♡</span>
-      </div>
-      <div class="product-card">
-        <div class="product-img">
-          <img
-            src="https://preview.colorlib.com/theme/cozastore/images/product-01.jpg.webp"
-            alt="Classic Trench Coat"
-          />
-          <a href="#product-popup" class="quick-view-btn">Quick View</a>
-        </div>
-        <div class="product-info">
-          <p class="product-title">Classic Trench Coat</p>
-          <p class="product-price">$75.00</p>
-        </div>
-        <span class="wishlist">♡</span>
-      </div>
-      <div class="product-card">
-        <div class="product-img">
-          <img
-            src="https://preview.colorlib.com/theme/cozastore/images/product-01.jpg.webp"
-            alt="Classic Trench Coat"
-          />
-          <a href="#product-popup" class="quick-view-btn">Quick View</a>
-        </div>
-        <div class="product-info">
-          <p class="product-title">Classic Trench Coat</p>
-          <p class="product-price">$75.00</p>
-        </div>
-        <span class="wishlist">♡</span>
-      </div>
-      <div class="product-card">
-        <div class="product-img">
-          <img
-            src="https://preview.colorlib.com/theme/cozastore/images/product-01.jpg.webp"
-            alt="Classic Trench Coat"
-          />
-          <a href="#product-popup" class="quick-view-btn">Quick View</a>
-        </div>
-        <div class="product-info">
-          <p class="product-title">Classic Trench Coat</p>
-          <p class="product-price">$75.00</p>
-        </div>
-        <span class="wishlist">♡</span>
-      </div>
-    </section>
 
     <footer class="footer">
       <div class="footer-container">
@@ -331,39 +217,9 @@
       </div>
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"></script>
+     <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
+  <script src="../firebase_conf.js"></script>
     <script src="customer.js"></script>
-      <script>
-    let currentSlide = 0;
-    const slides = document.querySelectorAll('.carousel-item');
-    const indicators = document.querySelectorAll('.indicator');
-    const inner = document.querySelector('.carousel-inner');
-
-    function updateCarousel() {
-      inner.style.transform = `translateX(-${currentSlide * 100}%)`;
-      indicators.forEach((indicator, index) => {
-        indicator.classList.toggle('active', index === currentSlide);
-      });
-    }
-
-    function moveSlide(direction) {
-      currentSlide += direction;
-      if (currentSlide < 0) currentSlide = slides.length - 1;
-      else if (currentSlide >= slides.length) currentSlide = 0;
-      updateCarousel();
-    }
-
-    function goToSlide(index) {
-      currentSlide = index;
-      updateCarousel();
-    }
-
-    // Auto-slide every 5s
-    setInterval(() => {
-      moveSlide(1);
-    }, 5000);
-  </script>
   </body>
 </html>
