--- a/auth/login.html
+++ b/auth/login.html
@@ -58,32 +58,42 @@
       const email = document.getElementById("email").value;
       const password = document.getElementById("password").value;
 
-      auth.signInWithEmailAndPassword(email, password)
-        .then((userCredential) => {
-          const user = userCredential.user;
+     auth.signInWithEmailAndPassword(email, password)
+  .then((userCredential) => {
+    const user = userCredential.user;
 
-          // Get username from Firestore
-          return db.collection("users").doc(user.uid).get()
-            .then((doc) => {
-              if (doc.exists) {
-                const data = doc.data();
-                alert("Login successful! Welcome " + data.username);
-                window.location.href = "../home/index.html";
-              } else {
-                alert("Login successful, but username not found.");
-                window.location.href = "../home/index.html";
-              }
-            });
-        })
-        .catch((error) => {
-          if (error.code === "auth/user-not-found") {
-            alert("This email is not registered. Please sign up first.");
-          } else if (error.code === "auth/wrong-password") {
-            alert("Incorrect password. Please try again.");
+    // Get role from Firestore
+    return db.collection("users").doc(user.uid).get()
+      .then((doc) => {
+        if (doc.exists) {
+          const data = doc.data();
+          const username = data.username || "User";
+          const role = data.role || "user"; // default fallback
+
+          alert("Login successful! Welcome " + username);
+
+          // Middleware-style redirect
+          if (role === "admin") {
+            window.location.href = "../admin/index.html"; // 👈 Admin dashboard
           } else {
-            alert("Error: " + error.message);
+            window.location.href = "../home/index.html"; // 👈 Normal user home
           }
-        });
+        } else {
+          alert("Login successful, but user data not found.");
+          window.location.href = "../home/index.html";
+        }
+      });
+  })
+  .catch((error) => {
+    if (error.code === "auth/user-not-found") {
+      alert("This email is not registered. Please sign up first.");
+    } else if (error.code === "auth/wrong-password") {
+      alert("Incorrect password. Please try again.");
+    } else {
+      alert("Error: " + error.message);
+    }
+  });
+
     });
  
 
