--- a/admin/index.html
+++ b/admin/index.html
@@ -23,24 +23,32 @@
         <a href="index.html">Home</a>
         <a href="categories/categories.html">Categories</a>
         <a href="products/products.html">Products</a>
-        <a href="orders.html">Orders</a>
+        <a href="orders/orders.html">Orders</a>
       </aside>
         <div class="total">
           <h3>Total Products</h3>
-                <h4>10</h4>
+                <h4 id="productsCount"></h4>
         </div>
         <div class="total">
           <h3>Total Orders</h3>
-                <h4>20</h4>
+                <h4 id="ordersCount"></h4>
         </div>
         <div class="total">
           <h3>Total users</h3>
-          <h4>100</h4>
+          <h4 id="usersCount"></h4>
         </div>
       <section class="content">
         <!-- أي محتوى هنا -->
       </section>
     </main>
+    
+  <!-- Firebase Scripts -->
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
+
+  <!-- Firebase config -->
+  <script src="../../firebase_conf.js"></script>
+
     <script src="categories/main.js"></script>
   </body>
   
