--- a/cart/cart.html
+++ b/cart/cart.html
@@ -8,7 +8,6 @@
     <title>Cart Page</title>
 </head>
 <body>
-        <!-- Main Menu -->
     <div class="main-menu">
     <div class="container">
     <div class="menu-content">
@@ -21,8 +20,8 @@
         <a href="#">About</a>
         <a href="#">Contact</a>
         <div class="nav-icons">
-        <a href="#"><i class="fas fa-shopping-cart"></i></a>
-        <a href="#"><i class="fas fa-heart"></i></a>
+        <a href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+        <a href="../wishlist/wishlist.html" target="_blank"><i class="fas fa-heart"></i></a>
         <a href="#"><i class="fas fa-search"></i></a>
         </div>
         <a href="../auth/login.html"><button class="btnlogin">login </button></a>
@@ -30,59 +29,32 @@
         </div>
         </div>
         </div>
-            <!--body wished product-->
-<div class="cart-container">
+<div class="card-container">
     <div class="table-header">
-        <div class="col-product">PRODUCT</div>
-        <div class="col-price">PRICE</div>
-        <div class="linequantity">QUANTITY</div>
-        <div class="col-total">TOTAL</div>
+    <div class="col-product">PRODUCT</div>
+    <div class="col-id">ID</div> <div class="col-price">PRICE</div>
+    <div class="linequantity">QUANTITY</div>
+    <div class="col-total">TOTAL</div>
     </div>
-    <div class="cart-item">
-        <div class="col-product">
-            <button class="accept-btn">&#10003;</button>
-            <span class="remove-btn">&times;</span>
-            <img src="images/item-cart-04.jpg.webp" alt="Product Image">
-            <span>Fresh Strawberries</span>
-        </div>
-        <div class="col-price">$ 36.00</div>
-        <div class="col-quantity">
-            <button class="quantity-btn">-</button>
-            <input type="number" value="1" class="quantity-input">
-            <button class="quantity-btn">+</button>
-        </div>
-        <div class="col-total">$ 36.00</div>
-    </div>
-    <div class="cart-item">
-        <div class="col-product">
-            <button class="accept-btn">&#10003;</button>
-            <span class="remove-btn">&times;</span>
-            <img src="images/item-cart-05.jpg.webp" alt="Product Image">
-            <span>Lightweight Jacket</span>
-        </div>
-        <div class="col-price">$ 16.00</div>
-        <div class="col-quantity">
-            <button class="quantity-btn">-</button>
-            <input type="number" value="1" class="quantity-input">
-            <button class="quantity-btn">+</button>
-        </div>
-        <div class="col-total">$ 16.00</div>
+    <div id="cart-items">
     </div>
     <div class="cart-footer">
-        <input class="coupon-input" type="text" placeholder="Coupon Code">
+        <button class="removeall-btn">Remove All Products</button>
         <button class="Continue-btn">Continue Shopping</button>
     </div>
 </div>
-            <!--cart total-->
         <aside class="aside-cart">
         <h2 class="aside-title">CART TOTALS</h2>
             <div class="total-row">
                 <span>Total: </span>
-                <span>$52.00</span>
+                <span>$0.00</span>
             </div>
         <button class="proceed-btn">PROCEED TO CHECKOUT</button>
     </aside>
-
+    <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
+    <script src="../firebase_conf.js"></script>
     <script src="cartscript.js"></script>
 </body>
 </html>
