--- a/wishlist/wishlist.html
+++ b/wishlist/wishlist.html
@@ -8,80 +8,60 @@
     <title>WishList Page</title>
 </head>
 <body>
-    <!-- Main Menu -->
     <div class="main-menu">
-    <div class="container">
-    <div class="menu-content">
-        <a href="../home/index.html" target="_blank" class="logo">COZA STORE</a>
-        <div class="nav-links">
-        <a href="../home/index.html" target="_blank">Home</a>
-        <a href="../home/index.html" target="_blank">Shop</a>
-        <a href="../home/index.html" target="_blank">Features</a>
-        <a href="#">Blog</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-        <div class="nav-icons">
-            <a href="#"><i class="fas fa-shopping-cart"></i></a>
-            <a href="#"><i class="fas fa-heart"></i></a>
-            <a href="#"><i class="fas fa-search"></i></a>
+        <div class="container">
+            <div class="menu-content">
+                <a href="../home/index.html" target="_blank" class="logo">COZA STORE</a>
+                <div class="nav-links">
+                    <a href="../home/index.html" target="_blank">Home</a>
+                    <a href="../home/index.html" target="_blank">Shop</a>
+                    <a href="../home/index.html" target="_blank">Features</a>
+                    <a href="#">Blog</a>
+                    <a href="#">About</a>
+                    <a href="#">Contact</a>
+                    <div class="nav-icons">
+                        <a href="../cart/cart.html" target="_blank"><i class="fas fa-shopping-cart"></i></a>
+                        <a href="wishlist.html"><i class="fas fa-heart"></i></a>
+                        <a href="#"><i class="fas fa-search"></i></a>
+                    </div>
+                    <a href="../auth/login.html"><button class="btnlogin">login </button></a>
+                </div>
+            </div>
         </div>
-        <a href="../auth/login.html"><button class="btnlogin">login </button></a>
-        </div>
     </div>
-    </div>
-    </div>
-    <!--wish list table-->
     <div class="wishlist-container">
-    <div class="table-header">
-        <div class="col-product">PRODUCT</div>
-        <div class="col-price">PRICE</div>
-        <div class="lineprocedures">Procedures</div>
-    </div>
-    <div class="cart-item">
-        <div class="col-product">
-            <img src="images/item-cart-04.jpg.webp" alt="Product Image">
-            <span>Fresh Strawberries</span>
+        <div class="table-header">
+            <div></div> <div class="col-id">ID</div>
+            <div class="col-product">PRODUCT</div>
+            <div class="col-price">PRICE</div>
+            <div class="lineprocedures proced">Procedures</div>
         </div>
-        <div class="col-price">$ 36.00</div>
-        <div class="col-procedures">
-            <button class="col-procedures-btn">Add To Shopping cart</button>
-            <button class="col-procedures-btnre">Remove From Wish List</button>
+        <div class="card-container">
+        </div>
+        <div class="wishlist-actions">
+            <button class="remove-btn">Remove All Products</button>
+            <button class="continue-btn">Continue Shopping</button>
         </div>
     </div>
-    <div class="cart-item">
-        <div class="col-product">
-            <img src="images/item-cart-05.jpg.webp" alt="Product Image">
-            <span>Lightweight Jacket</span>
-        </div>
-        <div class="col-price">$ 16.00</div>
-        <div class="col-procedures">
-            <button class="col-procedures-btn">Add To Shopping cart</button>
-            <button class="col-procedures-btnre">Remove From Wish List</button>
-        </div>
-    </div>
-    <div class="wishlist-actions">
-        <button class="remove-btn">Remove All Wish List Elements</button>
-        <button class="continue-btn">Continue Shopping</button>
-    </div>
-
-    </div>
-    <!-- aside section-->
     <aside class="wishlist-summary-section">
-                <h3 class="section-title"> Wish List Options  </h3>
-                <hr>
-                <div class="summary-item">
-                    <span> Element in Wish List : </span>
-                    <span class="summary-value">2</span>
-                </div>
-                <div class="total-price">
-                <span> The Total : </span>
-                <span class="totalprice-value">$52.00</span>
-                </div>
-                <div class="summary-footer">
-                    <button class="proceed-checkout-btn">Continue To Buy</button>
-                </div>
+        <h3 class="section-title"> Wish List Options  </h3>
+        <hr>
+        <div class="summary-item">
+            <span> Element in Wish List : </span>
+            <span class="summary-value">0</span>
+        </div>
+        <div class="total-price">
+            <span> The Total : </span>
+            <span class="totalprice-value">$0.00</span>
+        </div>
+        <div class="summary-footer">
+            <button class="proceed-checkout-btn">Continue To Buy</button>
+        </div>
     </aside>
-    
+    <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
+    <script src="../firebase_conf.js"></script>
     <script src="wishlistscript.js"></script>
 </body>
 </html>
